k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-backend
  namespace: llm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-backend
  template:
    metadata:
      labels:
        app: llm-backend
    spec:
      containers:
      - name: llm-backend
        image: asia-southeast1-docker.pkg.dev/mlops-476305/my-mlops/llm-backend:latest
        ports:
        - containerPort: 8080
