k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-frontend
  namespace: llm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-frontend
  template:
    metadata:
      labels:
        app: llm-frontend
    spec:
      containers:
      - name: llm-frontend
        image: asia-southeast1-docker.pkg.dev/mlops-476305/my-mlops/llm-frontend:latest
        ports:
        - containerPort: 8080
