k8s/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-app-ingress
  namespace: llm-app
  annotations:
    # dùng ingress-nginx; chuyển sang spec.ingressClassName thay cho annotation cũ
    # Bật xác thực qua oauth2-proxy
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$request_uri"
    cert-manager.io/cluster-issuer: letsencrypt-staging

    # Tùy chọn: giới hạn body lớn hơn nếu cần
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mlops-ai.duckdns.org
      secretName: llm-app-tls   
  rules:
    - host: mlops-ai.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-frontend-service
                port:
                  number: 80
